# s5_messenger

./: .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flutter_rust_bridge.yaml  flutterw  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: auto-release.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  flutterw  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/view/: demo_main_view.dart  group_chat.dart  group_list.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/windows/: CMakeLists.txt
ios/: flutter_package.podspec  s5_messenger.podspec
lib/: s5_messenger.dart
lib/src/mls5/: mls5.dart  (+1 more)
linux/: CMakeLists.txt
macos/: flutter_package.podspec  s5_messenger.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_s5_messenger.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_s5_messenger.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
(+16 files in other folders)
