[package]
name = "s5_messenger"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.11.1"
anyhow = "1.0.86"
getrandom = { version = "0.2.15", features = ["js"] }
openmls = "0.6.0-pre.1"
openmls_basic_credential = { version = "0.3.0-pre.1", features = ["clonable"] }
openmls_rust_crypto = "0.3.0-pre.1"
openmls_traits = "0.3.0-pre.2"
serde_json = "1.0.125"
thiserror = "1.0.63"
openmls_memory_storage = { version = "0.3.0-pre.2", features = ["test-utils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
